exercicios desafios prontos

--- a/src/styles.css
+++ b/src/styles.css
@@ -152,3 +152,8 @@ body {
     .centralizar {
         justify-self: center;
     }
+
+    /* Remove sublinhado de todos os Links com classe btn */
+    a.btn {
+    text-decoration: none;
+  }
